Avoid permission prompt on flat pages, avoid mic dialog on flat pages on safari

--- a/src/assets/stylesheets/global.scss
+++ b/src/assets/stylesheets/global.scss
@@ -339,6 +339,7 @@ a-scene.visible {
   border-radius: 6px 6px 0 0;
   box-shadow: 0px 12px 28px #111749cc;
   z-index: 10; 
+  background-color: white;
 }
 
 #webspace-ui.projection-flat .ql-container {
@@ -346,7 +347,7 @@ a-scene.visible {
   min-height: auto;
   width: 100%;
   height: 100%;
-  background-color: auto;
+  background-color: transparent;
   pointer-events: auto;
   border-radius: 0;
   box-shadow: none;
